# AnimeGameServer

./: .gitignore  CMakeLists.txt  PerformanceAudit.md  README.md  Structure.md  devlog.txt
config/: gacha_pool.yaml  server.yaml
include/common/: ErrorCode.h
include/common/config/: Config.h
include/common/logger/: Logger.h
include/common/metrics/: ServerMetrics.h
include/common/random/: RandomEngine.h
include/common/thread/: GlobalThreadPool.h  ThreadPool.h
include/database/mysql/: MySQLConnection.h  MySQLConnectionPool.h  MySQLResult.h
include/database/player/: PlayerLoader.h  PlayerSaver.h
include/database/queue/: SaveQueue.h
include/database/redis/: PlayerCache.h  RedisClient.h  RedisKeyManager.h  RedisPool.h
include/database/repository/: AccountRepository.h  PlayerRepository.h
include/database/task/: DatabaseTask.h  SavePlayerTask.h
include/database/worker/: DBWorker.h  DBWorkerPool.h
include/game/actor/: Actor.h  ActorSystem.h  Mailbox.h  ObjectPool.h  PlayerActor.h
include/game/gacha/: GachaItem.h  GachaPool.h  GachaPoolManager.h  GachaSystem.h  PitySystem.h
include/game/player/: Currency.h  GachaHistory.h  Inventory.h  Player.h  PlayerCommandQueue.h  PlayerDirtyFlag.h  PlayerLogicLoop.h  PlayerManager.h
include/network/: Connection.h  TcpServer.h
include/network/asio/: AsioContextPool.h
include/network/dispatcher/: MessageDispatcher.h
include/network/manager/: ConnectionManager.h
include/network/protocol/: ErrorSender.h  IMessage.h  MessageContext.h  MessageDecoder.h  MessageId.h  MessageMacro.h  MessageRegistry.h  Packet.cpp  Packet.h  PacketParser.h  ProtoMessage.h  ProtocolRegistry.h  ResponseSender.h
include/network/protocol/messages/: LoginMessage.h
include/network/protocol/proto/: common.proto  gacha.proto  heartbeat.proto  login.proto
include/network/session/: Session.h  SessionManager.h
include/services/: BaseService.h  GachaService.h  HeartbeatService.h  IdempotencyService.h  LoginService.h  ServiceManager.h
src/: main.cpp
src/common/config/: Config.cpp
src/common/logger/: Logger.cpp
src/common/metrics/: ServerMetrics.cpp
src/common/random/: RandomEngine.cpp
src/common/thread/: GlobalThreadPool.cpp  ThreadPool.cpp
src/database/mysql/: MySQLConnection.cpp  MySQLConnectionPool.cpp
src/database/player/: PlayerLoader.cpp  PlayerSaver.cpp
src/database/queue/: SaveQueue.cpp
src/database/redis/: PlayerCache.cpp  RedisClient.cpp  RedisPool.cpp
src/database/repository/: AccountRepository.cpp  PlayerRepository.cpp
src/database/task/: SavePlayerTask.cpp
src/database/worker/: DBWorker.cpp  DBWorkerPool.cpp
src/game/actor/: Actor.cpp  ActorSystem.cpp
src/game/gacha/: GachaPool.cpp  GachaPoolManager.cpp  GachaSystem.cpp  PitySystem.cpp
src/game/player/: Currency.cpp  GachaHistory.cpp  Inventory.cpp  Player.cpp  PlayerCommandQueue.cpp  PlayerLogicLoop.cpp  PlayerManager.cpp
src/network/: Connection.cpp  TcpServer.cpp
src/network/asio/: AsioContextPool.cpp
src/network/dispatcher/: MessageDispatcher.cpp
src/network/manager/: ConnectionManager.cpp
src/network/protocol/: Packet.cpp  PacketParser.cpp  ProtocolRegistry.cpp
src/network/session/: Session.cpp  SessionManager.cpp
src/services/: GachaService.cpp  HeartbeatService.cpp  IdempotencyService.cpp  LoginService.cpp  ServiceManager.cpp
tests/: TestGacha.cpp  TestMain.cpp
tests/unit/: TestCurrency.cpp  TestSession.cpp
